:bug::sparkles::lipstick: fix pathing issues and make images not stretch to screen width

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,16 @@ body,
   box-sizing: border-box;
 }
 
+
+/* :root,
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  background-color: yellow;
+} */
+
 /* .clickable {
   color: rgb(0, 0, 83);
   display: block;
